<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#DDDDDD">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sport Track"
        android:textSize="50dp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/activity"
        android:text="@string/activity"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"/>

    <Button
        android:id="@+id/goals"
        android:text="@string/goals"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"/>

    <Button
        android:id="@+id/history"
        android:text="@string/hist"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"/>

    <Button
        android:id="@+id/sports"
        android:text="@string/sports"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"/>

    <Button
        android:id="@+id/exit"
        android:text="@string/exit"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        />

</LinearLayout>